test/org/midica/testfiles/failing/eff-flow-ctrl-num-too-high.midica
INCLUDE inc/instruments.midica


0: ctrl=128.set(50)
